ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: alb
spec:
  controller: ingress.eks.aws/alb
  parameters:
    apiGroup: elbv2.eks.aws
    kind: IngressClassParams
    name: alb
