curl-deployment-mng.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-mng
  namespace: networking
  labels:
    run: curl
spec:
  replicas: 1
  selector:
      matchLabels:
        run: curl
  template:
    metadata:
      labels:
        run: curl
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: karpenter.sh/nodepool
                operator: DoesNotExist
      containers:
      - name: curl
        image: radial/busyboxplus:curl
        imagePullPolicy: IfNotPresent
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      preemptionPolicy: PreemptLowerPriority
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
